test/mutation_analysis/s0191_number_of_1_bits/hafis/starchat/mutants/9/result.txt
./test/mutation_analysis/s0191_number_of_1_bits/hafis/starchat/mutants/9/Solution.java:25: error: unreachable statement
        while (false) {
                      ^
1 error
